syntax = "proto3";

option go_package = "./proto";

service UserService {
    rpc Create(CreateUserRequest) returns (UserProfileResponse);
    rpc Read(SingleUserRequest) returns (UserProfileResponse);
    rpc Update(SingleUserRequest) returns (SuccessResponse);
    rpc Delete(SingleUserRequest) returns (SuccessResponse);
}

message CreateUserRequest {
    string name = 1;
    string email = 2;
}

message SingleUserRequest {
    string id = 1;
}

message UserProfileResponse {
    string id = 1;
    string name = 2;
    string email = 3;
}

message SuccessResponse {
    string response = 1;
}

// 命令： protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative proto/*.proto